Temporary fix to .container element having too much height by default

--- a/src/main/frontend/auctions_frontend/src/index.css
+++ b/src/main/frontend/auctions_frontend/src/index.css
@@ -150,8 +150,9 @@ button:active {
   padding: 0 1.5rem;
   position: sticky;
   top: 0;
-  width: 100vw;
-  height: 80px;
+  width: 100%;
+  height: 10%;
+  min-height: 80px;
   background-color: #ff5f00;
   display: flex;
   align-items: center;
@@ -174,8 +175,6 @@ button:active {
 .header-logo-anchor {
   text-decoration: none;
   color: #002379;
-  /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif; */
   font-family: "Lobster";
   font-size: xx-large;
 }
@@ -185,7 +184,6 @@ button:active {
   color: #ff5f00;
   font-size: 8em;
   box-sizing: content-box;
-  /* border: 1px solid blue; */
   margin-bottom: 1em;
   text-align: center;
   animation: fadeIn 1s;
@@ -193,8 +191,12 @@ button:active {
 
 .container {
   display: flex;
-  /* align-items: stretch; */
-  height: 100%;
+  height: 90%;
+}
+
+.container.small {
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .sidebar {
